--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
